--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".traditional_app.view.TraditionalUI"
-            android:theme="@style/Theme.AppCompat"
-            android:exported="false" />
+            android:theme="@style/Theme.Labs"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
